FIND_PACKAGE(HELLO)
IF(HELLO_FOUND)
	ADD_EXECUTABLE(helloexe main.cpp)
	INCLUDE_DIRECTORIES(${HELLO_INCLUDE_DIR})  #添加头文件搜索路径
	TARGET_LINK_LIBRARIES(helloexe ${HELLO_LIBRARY}) #链接
	
	MESSAGE(STATUS "The HELLO_INCLUDE_DIR is:"${HELLO_INCLUDE_DIR})
	MESSAGE(STATUS "The HELLO_LIBRARY is:"${HELLO_LIBRARY})	
ENDIF(HELLO_FOUND)
