cmake_minimum_required(VERSION 3.0)
project(ch3_T8)

set(CMAKE_CXX_STANDARD 11)
find_package(Pangolin REQUIRED)
find_package(Sophus REQUIRED)

#option(USE_UBUNTU_20 "Set to ON if you are using Ubuntu 20.04" ON)
#find_package(Pangolin REQUIRED)
#find_package(Sophus REQUIRED)
#if(USE_UBUNTU_20)
#    message("You are using Ubuntu 20.04, fmt::fmt will be linked")
#    find_package(fmt REQUIRED)
#    set(FMT_LIBRARIES fmt::fmt)
#endif()

include_directories(${Pangolin_INCLUDE_DIRS})
#add_executable(trajectoryError trajectoryError.cpp )
add_executable(mytype mytype.cpp)
#target_link_libraries(trajectoryError ${Pangolin_LIBRARIES})
target_link_libraries(mytype ${Pangolin_LIBRARIES})